Fixed spacing/alignment with .ingred and .steps
Cleaned up the alignment on these two divs, aligned left with no
padding, auto margin, and no indent

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 10;
     box-sizing: border-box;
     text-align: center;
+    
 }
 
 .header h1 {
@@ -22,6 +23,7 @@ body {
     color: black;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
+    
 }
 
 img {
@@ -38,16 +40,17 @@ img {
     margin: auto;
     text-align: justify;
     padding: auto;
+    
 }
 
-.ingred {
-    width: 60%;
-    margin: auto;
+.ingred, .steps {
+    margin: 0;
+    text-align: left;
 }
 
 .steps {
-    width: 95%;
     
+    padding-left: auto;
 }
 
 #note {
@@ -55,23 +58,30 @@ img {
     font-size: 14px;
 }
 
+ul {
+    margin-left: 0;
+    padding-left: 0;
+}
+
 ul li {
-    text-align: left;
+    text-align: justify;
+    width: 60%;
     margin: auto;
-    text-indent: 15%;
-    padding: 0;
+    text-indent: 0%;
 }
 
 
 ol li {
     /* float: left; */
-    /* padding: 2px; */
     text-align: left;
     text-indent: 15%;
+    
     
 }
 
 li {
-   list-style-position: inside; 
+    list-style-position: inside; 
+    padding: 0;
+    white-space: nowrap;
 }
 
